attempt to fix communities page layout bug

--- a/sites/default/themes/mnartists/css/style.css
+++ b/sites/default/themes/mnartists/css/style.css
@@ -2,7 +2,15 @@
 /* now let's get those layout files */
 /* LAYOUT A ************************************/
 /* community and homepage template stuff */
-/* line 6, ../sass/layout-a.scss */
+/* line 5, ../sass/layout-a.scss */
+.layout-a .panel-2col .panel-col-first {
+  display: block;
+  clear: both;
+  float: none;
+  margin: 0 0 30px 0;
+  padding: 0;
+}
+/* line 10, ../sass/layout-a.scss */
 .layout-a .panel-col-first {
   float: left;
   width: 75%;
@@ -10,77 +18,77 @@
   padding-right: 20px;
 }
 @media screen and (max-width: 480px) {
-  /* line 6, ../sass/layout-a.scss */
+  /* line 10, ../sass/layout-a.scss */
   .layout-a .panel-col-first {
     padding-right: 0;
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 6, ../sass/layout-a.scss */
+  /* line 10, ../sass/layout-a.scss */
   .layout-a .panel-col-first {
     padding-right: 0;
   }
 }
 @media screen and (max-width: 960px) {
-  /* line 6, ../sass/layout-a.scss */
+  /* line 10, ../sass/layout-a.scss */
   .layout-a .panel-col-first {
     padding-right: 0;
   }
 }
-/* line 22, ../sass/layout-a.scss */
+/* line 26, ../sass/layout-a.scss */
 .layout-a .panel-col-first .inside {
   margin: 0 .5em 1em 0;
 }
-/* line 25, ../sass/layout-a.scss */
+/* line 29, ../sass/layout-a.scss */
 .layout-a .panel-col-first .inside .article-thing {
   margin-right: 20px;
 }
-/* line 28, ../sass/layout-a.scss */
+/* line 32, ../sass/layout-a.scss */
 .layout-a .panel-col-first .inside .search-results {
   margin-right: 20px;
 }
-/* line 32, ../sass/layout-a.scss */
+/* line 36, ../sass/layout-a.scss */
 .layout-a .panel-col-first .inset-left {
   float: left;
   width: 75%;
 }
-/* line 36, ../sass/layout-a.scss */
+/* line 40, ../sass/layout-a.scss */
 .layout-a .panel-col-first .inset-right {
   float: left;
   width: 25%;
 }
-/* line 42, ../sass/layout-a.scss */
+/* line 46, ../sass/layout-a.scss */
 .layout-a .panel-col-last {
   float: left;
   width: 25%;
   box-sizing: border-box;
 }
-/* line 47, ../sass/layout-a.scss */
+/* line 51, ../sass/layout-a.scss */
 .layout-a .panel-col-last .inside {
   margin: 0 0 1em .5em;
 }
-/* line 51, ../sass/layout-a.scss */
+/* line 55, ../sass/layout-a.scss */
 .layout-a .panel-separator {
   margin: 0 0 1em 0;
 }
 
-/* line 56, ../sass/layout-a.scss */
+/* line 60, ../sass/layout-a.scss */
 * html .panel-2col.layout-a .panel-col-first {
   width: 74.9%;
 }
 
-/* line 59, ../sass/layout-a.scss */
+/* line 63, ../sass/layout-a.scss */
 * html .panel-2col.layout-a .panel-col-last {
   width: 24.9%;
 }
 
 /* insets */
-/* line 63, ../sass/layout-a.scss */
+/* line 67, ../sass/layout-a.scss */
 * html .panel-2col.layout-a .panel-col-first .panel-col-first.inset-left {
   width: 74.9%;
 }
 
-/* line 66, ../sass/layout-a.scss */
+/* line 70, ../sass/layout-a.scss */
 * html .panel-2col.layout-a .panel-col-first .panel-col-last.inset-right {
   width: 24.9%;
 }
