--- a/sites/default/themes/mnartists/sass/layout-a.scss
+++ b/sites/default/themes/mnartists/sass/layout-a.scss
@@ -2,7 +2,11 @@
 /* community and homepage template stuff */
 
 .layout-a {
-
+  .panel-2col .panel-col-first {
+    display:block;clear:both;
+    float:none;margin:0 0 30px 0;
+    padding:0;
+  }
     .panel-col-first {
         float: left;
         width: 75%;
